# text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  TODO  close.sh  editor.c  main.c  main.cpp  start.sh  test.c
h/: bufferpool.h  cursor.h  document.h  editor.h  linenode.h  node.h  utils.h
shaders/: v3f-t2f-c4f.vert
shared/: commands.c  commands.h  networking.c  networking.h
src/: bufferpool.c  cursor.c  document.c  editor.c  linenode.c  main.c  node.c  tests.c  utils.c
tcl/: commands.tcl  editor.tcl  entry.tcl  networking.tcl
